--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -20,8 +20,15 @@ body {
 	margin: 0 auto;
 }
 
+.cone-3d-app {
+	padding: 32px 0;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+
 .cone-setup {
-	padding: 32px 0 24px;
+	padding-bottom: 24px;
 }
 
 .cone-setup__header {
@@ -108,7 +115,8 @@ body {
 
 .view-3d {
 	width: 100%;
-	height: 500px;
+	flex-grow: 1;
+	max-height: 600px;
 	border-radius: 8px;
 	overflow: hidden;
 	background-color: var(--color-inactive);
